# proven-python

./: .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  ruff.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: validate.yml
scripts/: test_validate_repo.py  validate_repo.py
skills/proven-python/: SKILL.md
skills/proven-python/assets/: .pre-commit-config.yaml  ci.yml  pyproject.toml
skills/proven-python/checklists/: code-review.md  pre-commit.md
skills/proven-python/references/: design.md  documentation.md  human-readable.md  review.md  sources.md  style.md  testing.md  typing.md
